新規ページ追加

--- a/flow.html
+++ b/flow.html
@@ -43,7 +43,7 @@
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="index.html#top">トップ</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="service.html">サービス紹介</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="schedule.html">1日の過ごし方</a></li>
-            <li class="site-header__nav-item"><a class="site-header__nav-link" href="index.html#staff">スタッフ紹介</a></li>
+            <li class="site-header__nav-item"><a class="site-header__nav-link" href="staff.html">スタッフ紹介</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="flow.html">ご利用の流れ</a></li>
           </ul>
         </nav>
@@ -79,7 +79,7 @@
             <h2 class="flow-step__title">資料請求について</h2>
             <p class="flow-step__text">
               まずは当事業所のパンフレットや資料をご覧ください。サービスの詳細や特徴について詳しく知ることができます。お電話またはお問い合わせフォームよりお気軽にご請求ください。</p>
-            <a href="index.html#contact" class="flow-step__btn flow-step__btn--outline">
+            <a href="contact.html" class="flow-step__btn flow-step__btn--outline">
               <img src="figma-assets/icon-mail-4.svg" alt="" class="flow-step__btn-icon" width="22" height="22" />
               <span class="flow-step__btn-label">資料請求</span>
               <svg class="flow-step__btn-arrow" width="20" height="20" viewBox="0 0 20 20" fill="none"
@@ -102,7 +102,7 @@
             <h2 class="flow-step__title">見学</h2>
             <p class="flow-step__text">実際の事業所の雰囲気や作業風景をご覧いただけます。スタッフが丁寧にご案内いたしますので、ご本人様はもちろん、ご家族や支援機関の方もご一緒にぜひお越しください。
             </p>
-            <a href="index.html#contact" class="flow-step__btn flow-step__btn--outline">
+            <a href="contact.html" class="flow-step__btn flow-step__btn--outline">
               <img src="figma-assets/icon-mail-4.svg" alt="" class="flow-step__btn-icon" width="22" height="22" />
               <span class="flow-step__btn-label">見学相談</span>
               <svg class="flow-step__btn-arrow" width="20" height="20" viewBox="0 0 20 20" fill="none"
@@ -124,7 +124,7 @@
                 class="flow-step__badge-num">03</span></div>
             <h2 class="flow-step__title">相談</h2>
             <p class="flow-step__text">「自分にできるかな？」「通えるか不安」など、今の悩みや希望をお聞かせください。お一人おひとりの状況に合わせて、最適なプランをご提案させていただきます。</p>
-            <a href="index.html#contact" class="flow-step__btn flow-step__btn--outline">
+            <a href="contact.html" class="flow-step__btn flow-step__btn--outline">
               <img src="figma-assets/icon-mail-4.svg" alt="" class="flow-step__btn-icon" width="22" height="22" />
               <span class="flow-step__btn-label">無料相談</span>
               <svg class="flow-step__btn-arrow" width="20" height="20" viewBox="0 0 20 20" fill="none"
@@ -146,7 +146,7 @@
                 class="flow-step__badge-num">04</span></div>
             <h2 class="flow-step__title">無料体験</h2>
             <p class="flow-step__text">実際に作業を体験してみることで、自分に合っているかどうかを確認できます。短時間からの体験も可能ですので、無理なくスタートできます。</p>
-            <a href="index.html#contact" class="flow-step__btn flow-step__btn--outline">
+            <a href="contact.html" class="flow-step__btn flow-step__btn--outline">
               <img src="figma-assets/icon-mail-4.svg" alt="" class="flow-step__btn-icon" width="22" height="22" />
               <span class="flow-step__btn-label">無料体験申し込み</span>
               <svg class="flow-step__btn-arrow" width="20" height="20" viewBox="0 0 20 20" fill="none"
@@ -168,7 +168,7 @@
                 class="flow-step__badge-num">05</span></div>
             <h2 class="flow-step__title">利用手続きの流れ</h2>
             <p class="flow-step__text">利用が決まりましたら、受給者証の申請など必要な手続きを行います。スタッフがサポートいたしますので、初めての方でも安心してお手続きいただけます。</p>
-            <a href="index.html#contact" class="flow-step__btn flow-step__btn--outline">
+            <a href="contact.html" class="flow-step__btn flow-step__btn--outline">
               <img src="figma-assets/icon-mail-4.svg" alt="" class="flow-step__btn-icon" width="22" height="22" />
               <span class="flow-step__btn-label">無料体験申し込み</span>
               <svg class="flow-step__btn-arrow" width="20" height="20" viewBox="0 0 20 20" fill="none"
@@ -227,7 +227,7 @@
           </ul>
         </div>
         <div class="section-cta__btn">
-          <a class="c-btn c-btn--cta" href="index.html#contact">
+          <a class="c-btn c-btn--cta" href="contact.html">
             <span class="c-btn__icon">
               <img src="figma-assets/icon-mail-3.svg" alt="" width="24" height="24" />
             </span>
@@ -269,12 +269,12 @@
             <li><a href="schedule.html">一日の過ごし方</a></li>
             <li><a href="flow.html">ご利用の流れ</a></li>
             <li><a href="index.html#voices">利用者の声</a></li>
-            <li><a href="index.html#staff">事業所紹介</a></li>
+            <li><a href="introduction.html">事業所紹介</a></li>
           </ul>
           <ul class="site-footer__links-col">
-            <li><a href="index.html#staff">スタッフ紹介</a></li>
-            <li><a href="index.html#contact">よくあるご質問</a></li>
-            <li><a href="index.html#contact">お問い合わせ</a></li>
+            <li><a href="staff.html">スタッフ紹介</a></li>
+            <li><a href="qa.html">よくあるご質問</a></li>
+            <li><a href="contact.html">お問い合わせ</a></li>
           </ul>
         </nav>
       </div>
