--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="#top">トップ</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="service.html">サービス紹介</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="schedule.html">1日の過ごし方</a></li>
-            <li class="site-header__nav-item"><a class="site-header__nav-link" href="#staff">スタッフ紹介</a></li>
+            <li class="site-header__nav-item"><a class="site-header__nav-link" href="staff.html">スタッフ紹介</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="flow.html">ご利用の流れ</a></li>
           </ul>
         </nav>
@@ -475,12 +475,12 @@
             <li><a href="schedule.html">一日の過ごし方</a></li>
             <li><a href="flow.html">ご利用の流れ</a></li>
             <li><a href="#voices">利用者の声</a></li>
-            <li><a href="#staff">事業所紹介</a></li>
+            <li><a href="introduction.html">事業所紹介</a></li>
           </ul>
           <ul class="site-footer__links-col">
-            <li><a href="#staff">スタッフ紹介</a></li>
+            <li><a href="staff.html">スタッフ紹介</a></li>
             <li><a href="#contact">よくあるご質問</a></li>
-            <li><a href="#contact">お問い合わせ</a></li>
+            <li><a href="contact.html">お問い合わせ</a></li>
           </ul>
         </nav>
       </div>
