新ページ修正

--- a/contact.html
+++ b/contact.html
@@ -215,7 +215,7 @@
             <li><a href="service.html">サービス紹介</a></li>
             <li><a href="schedule.html">一日の過ごし方</a></li>
             <li><a href="flow.html">ご利用の流れ</a></li>
-            <li><a href="index.html#voices">利用者の声</a></li>
+            <li><a href="voice.html">利用者の声</a></li>
             <li><a href="introduction.html">事業所紹介</a></li>
           </ul>
           <ul class="site-footer__links-col">
