--- a/introduction.html
+++ b/introduction.html
@@ -122,7 +122,14 @@
             </div>
           </div>
           <div class="intro-page__map-wrap">
-            <img src="figma-assets/introduction-map.png" alt="アルトの所在地" class="intro-page__map-img" />
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3251.248246649857!2d133.332931!3d35.423880000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3556f77f1ee1038f%3A0x9dbbcc8126aafda5!2z5bCx5Yq057aZ57aa5pSv5o-0QuWei-OCouODq-ODiA!5e0!3m2!1sja!2sjp!4v1770803298542!5m2!1sja!2sjp"
+              class="intro-page__map-iframe"
+              title="アルトの所在地（Googleマップ）"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
         </section>
 
@@ -150,11 +157,13 @@
           <p class="intro-page__section-sub">CEO MESSAGE</p>
           <p class="intro-page__rep-role">代表取締役</p>
           <p class="intro-page__rep-name">田中太郎</p>
-          <p class="intro-page__body intro-page__rep-message">
-            はじめまして。わこう介護サービスの代表、山田です。私たちは、「誰もが安心して挑戦できる場所をつくりたい」という想いから、この事業所を立ち上げました。働くことへの不安や悩みは、人それぞれ異なります。だからこそ、画一的な支援ではなく、一人ひとりの声に耳を傾け、その人に合ったペースで進めるような温かいサポートを心がけています。ぜひ一度、私たちの事業所に見学にいらしてください。皆様にお会いできることを楽しみにしております。
-          </p>
-          <div class="intro-page__rep-image-wrap">
-            <img src="figma-assets/introduction-representative.png" alt="代表者" class="intro-page__rep-image" />
+          <div class="intro-page__rep-content">
+            <p class="intro-page__body intro-page__rep-message">
+              はじめまして。わこう介護サービスの代表、山田です。私たちは、「誰もが安心して挑戦できる場所をつくりたい」という想いから、この事業所を立ち上げました。働くことへの不安や悩みは、人それぞれ異なります。だからこそ、画一的な支援ではなく、一人ひとりの声に耳を傾け、その人に合ったペースで進めるような温かいサポートを心がけています。ぜひ一度、私たちの事業所に見学にいらしてください。皆様にお会いできることを楽しみにしております。
+            </p>
+            <div class="intro-page__rep-image-wrap">
+              <img src="figma-assets/introduction-representative.png" alt="代表者" class="intro-page__rep-image" />
+            </div>
           </div>
         </section>
 
@@ -295,7 +304,7 @@
             <li><a href="service.html">サービス紹介</a></li>
             <li><a href="schedule.html">一日の過ごし方</a></li>
             <li><a href="flow.html">ご利用の流れ</a></li>
-            <li><a href="index.html#voices">利用者の声</a></li>
+            <li><a href="voice.html">利用者の声</a></li>
             <li><a href="introduction.html">事業所紹介</a></li>
           </ul>
           <ul class="site-footer__links-col">
