--- a/qa.html
+++ b/qa.html
@@ -80,7 +80,8 @@
             </button>
             <div class="qa-accordion__panel" id="qa-a1" role="region" aria-labelledby="qa-q1" hidden>
               <p class="qa-accordion__a-label">A</p>
-              <div class="qa-accordion__answer"><p>—</p></div>
+              <div class="qa-accordion__answer"><p>アルトは福祉サービスのため障害者総合支援法に基づき、原則18歳以上の方がご利用いただけます。
+              </p></div>
             </div>
           </div>
 
@@ -104,7 +105,17 @@
             </button>
             <div class="qa-accordion__panel" id="qa-a3" role="region" aria-labelledby="qa-q3" hidden>
               <p class="qa-accordion__a-label">A</p>
-              <div class="qa-accordion__answer"><p>—</p></div>
+              <div class="qa-accordion__answer">
+                <p>大きな違いとして、以下のようなことがあります。</p>
+                <ul>
+                  <li>上場企業グループ会社が運営の安定した経営基盤（急な閉所等のリスクが小さい）</li>
+                  <li>米子市で障害福祉サービスを10年以上提供</li>
+                  <li>グループ会社から多様な業務を切り出すことができるため、一人ひとりにぴったりなお仕事を作れる</li>
+                  <li>「軽作業」だけでなく、パソコンを使ったバックオフィスのお仕事が豊富</li>
+                  <li>「高い工賃を目指したい！」という方には、より実践的な生産活動を提供し、活躍の機会を提供できる</li>
+                  <li>一般企業への就職支援に強い</li>
+                </ul>
+              </div>
             </div>
           </div>
 
@@ -116,7 +127,8 @@
             </button>
             <div class="qa-accordion__panel" id="qa-a4" role="region" aria-labelledby="qa-q4" hidden>
               <p class="qa-accordion__a-label">A</p>
-              <div class="qa-accordion__answer"><p>—</p></div>
+              <div class="qa-accordion__answer"><p>交通費の一部サポートやランチの無料提供があります。
+              </p></div>
             </div>
           </div>
 
@@ -128,7 +140,7 @@
             </button>
             <div class="qa-accordion__panel" id="qa-a5" role="region" aria-labelledby="qa-q5" hidden>
               <p class="qa-accordion__a-label">A</p>
-              <div class="qa-accordion__answer"><p>—</p></div>
+              <div class="qa-accordion__answer"><p>週1日短時間など、自分のペースで利用できます。また外出や対面コミュニケーションに不安がある方には、最初は自宅から利用できるように自治体と調整します。</p></div>
             </div>
           </div>
         </div>
@@ -193,7 +205,7 @@
             <li><a href="service.html">サービス紹介</a></li>
             <li><a href="schedule.html">一日の過ごし方</a></li>
             <li><a href="flow.html">ご利用の流れ</a></li>
-            <li><a href="index.html#voices">利用者の声</a></li>
+            <li><a href="voice.html">利用者の声</a></li>
             <li><a href="introduction.html">事業所紹介</a></li>
           </ul>
           <ul class="site-footer__links-col">
