--- a/voice.html
+++ b/voice.html
@@ -90,7 +90,7 @@
         </div>
 
         <!-- Card 2: 40代 男性 -->
-        <div class="voice-testimonial voice-testimonial--gray">
+        <div class="voice-testimonial">
           <div class="voice-testimonial__inner l-container">
             <article class="voice-testimonial-card">
               <div class="voice-testimonial-card__top">
