画像やボタンホバーなど更新

--- a/introduction.html
+++ b/introduction.html
@@ -162,7 +162,7 @@
               はじめまして。わこう介護サービスの代表、山田です。私たちは、「誰もが安心して挑戦できる場所をつくりたい」という想いから、この事業所を立ち上げました。働くことへの不安や悩みは、人それぞれ異なります。だからこそ、画一的な支援ではなく、一人ひとりの声に耳を傾け、その人に合ったペースで進めるような温かいサポートを心がけています。ぜひ一度、私たちの事業所に見学にいらしてください。皆様にお会いできることを楽しみにしております。
             </p>
             <div class="intro-page__rep-image-wrap">
-              <img src="figma-assets/introduction-representative.png" alt="代表者" class="intro-page__rep-image" />
+              <img src="figma-assets/representative-profile.jpg" alt="代表者" class="intro-page__rep-image" />
             </div>
           </div>
         </section>
