--- a/schedule.html
+++ b/schedule.html
@@ -80,13 +80,13 @@
         <div class="schedule-section__cards">
           <article class="schedule-card">
             <div class="schedule-card__image">
-              <img src="figma-assets/schedule-gaikan.png" alt="無料送迎" />
+              <img src="figma-assets/schedule-gaikan.jpg" alt="無料送迎" />
             </div>
             <p class="schedule-card__caption">無料送迎</p>
           </article>
           <article class="schedule-card">
             <div class="schedule-card__image">
-              <img src="figma-assets/schedule-health.png" alt="体調管理：福祉と医療の連携サポート" />
+              <img src="figma-assets/schedule-health.jpg" alt="体調管理：福祉と医療の連携サポート" />
             </div>
             <p class="schedule-card__caption">体調管理：福祉と医療の連携サポート</p>
           </article>
@@ -106,13 +106,13 @@
         <div class="schedule-section__cards">
           <article class="schedule-card">
             <div class="schedule-card__image">
-              <img src="figma-assets/schedule-cut.png" alt="チラシなどのカット作業" />
+              <img src="figma-assets/schedule-cut.jpg" alt="チラシなどのカット作業" />
             </div>
             <p class="schedule-card__caption">チラシなどのカット作業</p>
           </article>
           <article class="schedule-card">
             <div class="schedule-card__image">
-              <img src="figma-assets/schedule-p-ticket.png" alt="駐車券の仕分け" />
+              <img src="figma-assets/schedule-p-ticket.jpg" alt="駐車券の仕分け" />
             </div>
             <p class="schedule-card__caption">駐車券の仕分け</p>
           </article>
@@ -132,7 +132,7 @@
         <div class="schedule-section__cards">
           <article class="schedule-card">
             <div class="schedule-card__image">
-              <img src="figma-assets/schedule-lunch.png" alt="管理栄養士がたてた食事を無料提供" />
+              <img src="figma-assets/schedule-lunch.jpg" alt="管理栄養士がたてた食事を無料提供" />
             </div>
             <p class="schedule-card__caption">管理栄養士がたてた食事を無料提供</p>
           </article>
@@ -152,7 +152,7 @@
         <div class="schedule-section__cards">
           <article class="schedule-card">
             <div class="schedule-card__image">
-              <img src="figma-assets/schedule-pm-work.png" alt="午後作業" />
+              <img src="figma-assets/schedule-pm-work.jpg" alt="午後作業" />
             </div>
             <p class="schedule-card__caption">午後作業</p>
           </article>
@@ -171,7 +171,7 @@
         <div class="schedule-section__cards">
           <article class="schedule-card">
             <div class="schedule-card__image">
-              <img src="figma-assets/schedule-go-home.png" alt="帰りの送迎" />
+              <img src="figma-assets/schedule-go-home.jpg" alt="帰りの送迎" />
             </div>
             <p class="schedule-card__caption">帰りの送迎</p>
           </article>
