--- a/service.html
+++ b/service.html
@@ -85,8 +85,8 @@
         </article>
         <article class="service-feature">
           <div class="service-feature__content">
-            <h2 class="service-feature__title">みんなとの時間を楽しむ</h2>
-            <p class="service-feature__text">レクリエーションや季節のイベントを通じて、仲間との交流を楽しめます。無理のない範囲で、人と関わる喜びを感じていただけるようサポートします。</p>
+            <h2 class="service-feature__title">落ち着いた環境で、安心して取り組む</h2>
+            <p class="service-feature__text">一人ひとりのペースに合わせて、パソコン作業や軽作業に取り組める環境を整えています。スタッフがそばでサポートしながら、分からないことはすぐに相談できる安心の体制です。</p>
           </div>
           <div class="service-feature__image">
             <img src="figma-assets/training-card-2.jpg" alt="みんなとの時間を楽しむ" />
@@ -114,7 +114,7 @@
         <div class="service-jobs__grid">
           <article class="service-job-card">
             <div class="service-job-card__image">
-              <img src="figma-assets/training-card-1.jpg" alt="パソコン業務" />
+              <img src="figma-assets/work-card-1.jpg" alt="パソコン業務" />
             </div>
             <div class="service-job-card__body">
               <h3 class="service-job-card__title">パソコン業務</h3>
@@ -123,7 +123,7 @@
           </article>
           <article class="service-job-card">
             <div class="service-job-card__image">
-              <img src="figma-assets/training-card-2.jpg" alt="郵便物の封入や仕分け" />
+              <img src="figma-assets/work-card-2.jpg" alt="郵便物の封入や仕分け" />
             </div>
             <div class="service-job-card__body">
               <h3 class="service-job-card__title">郵便物の封入や仕分け</h3>
@@ -132,11 +132,38 @@
           </article>
           <article class="service-job-card">
             <div class="service-job-card__image">
-              <img src="figma-assets/training-card-3.jpg" alt="ポケットティッシュの封入" />
+              <img src="figma-assets/work-card-3.jpg" alt="ポケットティッシュの封入" />
             </div>
             <div class="service-job-card__body">
               <h3 class="service-job-card__title">ポケットティッシュの封入</h3>
               <p class="service-job-card__text">ポケットティッシュに、印刷された紙を丁寧に挟み込む作業です。細かい作業が得意な方、集中力がある方に向いています。</p>
+            </div>
+          </article>
+          <article class="service-job-card">
+            <div class="service-job-card__image">
+              <img src="figma-assets/work-card-4.jpg" alt="ティッシュカット作業" />
+            </div>
+            <div class="service-job-card__body">
+              <h3 class="service-job-card__title">ティッシュカット作業</h3>
+              <p class="service-job-card__text">業務用ティッシュを指定サイズにカットする軽作業です。手順に沿って丁寧に進めるお仕事で、コツコツ取り組むことが得意な方に向いています。</p>
+            </div>
+          </article>
+          <article class="service-job-card">
+            <div class="service-job-card__image">
+              <img src="figma-assets/work-card-5.jpg" alt="駐車券の仕訳作業" />
+            </div>
+            <div class="service-job-card__body">
+              <h3 class="service-job-card__title">駐車券の仕訳作業</h3>
+              <p class="service-job-card__text">回収された駐車券を種類ごとに仕分けする作業です。決められたルールに沿って確認しながら進めるため、正確さや集中力を活かせます。</p>
+            </div>
+          </article>
+          <article class="service-job-card">
+            <div class="service-job-card__image">
+              <img src="figma-assets/work-card-6.jpg" alt="チラシの貼り付け作業" />
+            </div>
+            <div class="service-job-card__body">
+              <h3 class="service-job-card__title">チラシの貼り付け作業</h3>
+              <p class="service-job-card__text">指定の用紙や台紙にチラシを貼り付ける軽作業です。位置やバランスを確認しながら丁寧に仕上げます。細かな作業が得意な方におすすめです。</p>
             </div>
           </article>
         </div>
