--- a/index.html
+++ b/index.html
@@ -196,21 +196,21 @@
           <article class="training-card">
             <h3 class="training-card__title">実務に近いパソコン業務</h3>
             <div class="training-card__image">
-              <img src="figma-assets/training-card-1.jpg" alt="" />
+              <img src="figma-assets/topwork-card-1.jpg" alt="" />
             </div>
             <p class="training-card__text">グループ会社と連携したバックオフィス業務やデータ入力など、実際の仕事に近い訓練ができます。</p>
           </article>
           <article class="training-card">
             <h3 class="training-card__title">軽作業・内職も選べます</h3>
             <div class="training-card__image">
-              <img src="figma-assets/training-card-2.jpg" alt="" />
+              <img src="figma-assets/topwork-card-2.jpg" alt="" />
             </div>
             <p class="training-card__text">紙の封入・ラベル貼り・梱包作業など、手を動かす仕事もご用意。得意に合わせて選べます。</p>
           </article>
           <article class="training-card">
             <h3 class="training-card__title">施設街就労も可能</h3>
             <div class="training-card__image">
-              <img src="figma-assets/training-card-3.jpg" alt="" />
+              <img src="figma-assets/topwork-card-3.jpg" alt="" />
             </div>
             <p class="training-card__text">施設外での就労にも対応しており、希望や状況に合わせた働き方を選べます。外部企業の仕事に触れることで、自信や実務経験を広げられます。</p>
           </article>
@@ -275,7 +275,7 @@
                           d="M0.386594 5.53693C0.139046 5.79236 0 6.1386 0 6.49961C0 6.86062 0.139046 7.20687 0.386594 7.4623L5.37104 12.6009C5.49383 12.7274 5.6396 12.8278 5.80003 12.8963C5.96046 12.9648 6.13241 13 6.30606 13C6.47971 13 6.65166 12.9648 6.8121 12.8963C6.97253 12.8278 7.1183 12.7274 7.24109 12.6009C7.36388 12.4743 7.46128 12.3241 7.52773 12.1588C7.59418 11.9934 7.62839 11.8162 7.62839 11.6373C7.62839 11.4583 7.59418 11.2811 7.52773 11.1158C7.46128 10.9504 7.36388 10.8002 7.24109 10.6737L4.51269 7.86191H14.6781C15.0287 7.86191 15.3649 7.71838 15.6128 7.4629C15.8607 7.20742 16 6.86091 16 6.49961C16 6.13831 15.8607 5.79181 15.6128 5.53633C15.3649 5.28085 15.0287 5.13732 14.6781 5.13732H4.51269L7.24109 2.32555C7.48896 2.06999 7.62816 1.72342 7.62808 1.36209C7.62799 1.00075 7.48863 0.654254 7.24065 0.398813C6.99266 0.143372 6.65637 -8.51219e-05 6.30575 3.78931e-08C5.95513 8.51977e-05 5.61891 0.143706 5.37104 0.399267L0.386594 5.53693Z"
                           fill="url(#about-arrow-gradient)" />
                       </g>
-                    </svg></span>利用者のお声！！</a></li>
+                    </svg></span>ご利用者のお声</a></li>
             </ul>
           </div>
         </div>
@@ -351,7 +351,7 @@
         <div class="section-news__grid">
           <article class="news-card" data-category="news">
             <a href="#" class="news-card__link">
-              <img src="figma-assets/news-1.jpg" alt="" class="news-card__image" />
+              <img src="figma-assets/no-image-default .jpg" alt="" class="news-card__image" />
               <div class="news-card__meta">
                 <time class="news-card__date">2025.11.26</time>
                 <span class="news-card__tag">ニュース</span>
@@ -361,7 +361,7 @@
           </article>
           <article class="news-card" data-category="event">
             <a href="#" class="news-card__link">
-              <img src="figma-assets/news-2.jpg" alt="" class="news-card__image" />
+              <img src="figma-assets/no-image-default .jpg" alt="" class="news-card__image" />
               <div class="news-card__meta">
                 <time class="news-card__date">2025.11.20</time>
                 <span class="news-card__tag">イベント</span>
@@ -371,7 +371,7 @@
           </article>
           <article class="news-card" data-category="media">
             <a href="#" class="news-card__link">
-              <img src="figma-assets/news-3.jpg" alt="" class="news-card__image" />
+              <img src="figma-assets/no-image-default .jpg" alt="" class="news-card__image" />
               <div class="news-card__meta">
                 <time class="news-card__date">2025.11.15</time>
                 <span class="news-card__tag">メディア</span>
@@ -381,7 +381,8 @@
           </article>
         </div>
         <div class="section-news__more">
-          <a class="section-news__link" href="#">
+          <!-- 変更: お知らせ一覧ページ追加に伴いリンク先を news.html に変更。影響範囲: トップのお知らせセクション「記事一覧をみる」のみ -->
+          <a class="section-news__link" href="news.html">
             記事一覧をみる
             <img src="figma-assets/icon-arrow.svg" alt="" class="section-news__arrow" />
           </a>
