--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         <div class="section-news__grid">
           <article class="news-card" data-category="news">
             <a href="#" class="news-card__link">
-              <img src="figma-assets/no-image-default .jpg" alt="" class="news-card__image" />
+              <span class="news-card__image-wrap"><img src="figma-assets/no-image-default .jpg" alt="" class="news-card__image" /></span>
               <div class="news-card__meta">
                 <time class="news-card__date">2025.11.26</time>
                 <span class="news-card__tag">ニュース</span>
@@ -361,7 +361,7 @@
           </article>
           <article class="news-card" data-category="event">
             <a href="#" class="news-card__link">
-              <img src="figma-assets/no-image-default .jpg" alt="" class="news-card__image" />
+              <span class="news-card__image-wrap"><img src="figma-assets/no-image-default .jpg" alt="" class="news-card__image" /></span>
               <div class="news-card__meta">
                 <time class="news-card__date">2025.11.20</time>
                 <span class="news-card__tag">イベント</span>
@@ -371,7 +371,7 @@
           </article>
           <article class="news-card" data-category="media">
             <a href="#" class="news-card__link">
-              <img src="figma-assets/no-image-default .jpg" alt="" class="news-card__image" />
+              <span class="news-card__image-wrap"><img src="figma-assets/no-image-default .jpg" alt="" class="news-card__image" /></span>
               <div class="news-card__meta">
                 <time class="news-card__date">2025.11.15</time>
                 <span class="news-card__tag">メディア</span>
