--- a/detail.html
+++ b/detail.html
@@ -40,11 +40,11 @@
 
         <nav class="site-header__nav" aria-label="グローバルナビゲーション">
           <ul class="site-header__nav-list">
-            <li class="site-header__nav-item"><a class="site-header__nav-link" href="index.html#top">トップ</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="service.html">サービス紹介</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="schedule.html">1日の過ごし方</a></li>
-            <li class="site-header__nav-item"><a class="site-header__nav-link" href="staff.html">スタッフ紹介</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="flow.html">ご利用の流れ</a></li>
+            <li class="site-header__nav-item"><a class="site-header__nav-link" href="voice.html">利用者の声</a></li>
+            <li class="site-header__nav-item"><a class="site-header__nav-link site-header__nav-link--cta" href="contact.html">資料請求</a></li>
           </ul>
         </nav>
       </div>
@@ -104,15 +104,40 @@
       <div class="section-cta__inner l-container">
         <div class="section-cta__block">
           <h2 class="section-cta__title">
-            あなたの<span class="section-cta__quote">「</span><span class="section-cta__accent">働きたい</span><span class="section-cta__quote">」</span>を、もう一度。
+            あなたの<span class="section-cta__quote">「</span><span class="section-cta__accent">働きたい</span><span
+              class="section-cta__quote">」</span>を、もう一度。
           </h2>
           <div class="section-cta__desc">
             <p class="section-cta__desc-line">一人で悩まなくて大丈夫。あなたのペースで</p>
             <p class="section-cta__desc-line">少しずつ前に進めるようにスタッフが寄り添います。</p>
           </div>
           <ul class="section-cta__links">
-            <li><a href="qa.html" class="section-cta__link"><span class="section-cta__link-arrow" aria-hidden="true"><svg width="16" height="13" viewBox="0 0 16 13" fill="none"><path d="M0.386594 5.53693C0.139046 5.79236 0 6.1386 0 6.49961C0 6.86062 0.139046 7.20687 0.386594 7.4623L5.37104 12.6009C5.49383 12.7274 5.6396 12.8278 5.80003 12.8963C5.96046 12.9648 6.13241 13 6.30606 13C6.47971 13 6.65166 12.9648 6.8121 12.8963C6.97253 12.8278 7.1183 12.7274 7.24109 12.6009C7.36388 12.4743 7.46128 12.3241 7.52773 12.1588C7.59418 11.9934 7.62839 11.8162 7.62839 11.6373C7.62839 11.4583 7.59418 11.2811 7.52773 11.1158C7.46128 10.9504 7.36388 10.8002 7.24109 10.6737L4.51269 7.86191H14.6781C15.0287 7.86191 15.3649 7.71838 15.6128 7.4629C15.8607 7.20742 16 6.86091 16 6.49961C16 6.13831 15.8607 5.79181 15.6128 5.53633C15.3649 5.28085 15.0287 5.13732 14.6781 5.13732H4.51269L7.24109 2.32555C7.48896 2.06999 7.62816 1.72342 7.62808 1.36209C7.62799 1.00075 7.48863 0.654254 7.24065 0.398813C6.99266 0.143372 6.65637 -8.51219e-05 6.30575 3.78931e-08C5.95513 8.51977e-05 5.61891 0.143706 5.37104 0.399267L0.386594 5.53693Z" fill="url(#cta-arrow-detail1)"/><defs><linearGradient id="cta-arrow-detail1" x1="0" y1="2.889" x2="16.047" y2="3.156" gradientUnits="userSpaceOnUse"><stop stop-color="#72DA6E"/><stop offset="1" stop-color="#6FC86B"/></linearGradient></defs></svg></span>よくあるご質問</a></li>
-            <li><a href="voice.html" class="section-cta__link"><span class="section-cta__link-arrow" aria-hidden="true"><svg width="16" height="13" viewBox="0 0 16 13" fill="none"><path d="M0.386594 5.53693C0.139046 5.79236 0 6.1386 0 6.49961C0 6.86062 0.139046 7.20687 0.386594 7.4623L5.37104 12.6009C5.49383 12.7274 5.6396 12.8278 5.80003 12.8963C5.96046 12.9648 6.13241 13 6.30606 13C6.47971 13 6.65166 12.9648 6.8121 12.8963C6.97253 12.8278 7.1183 12.7274 7.24109 12.6009C7.36388 12.4743 7.46128 12.3241 7.52773 12.1588C7.59418 11.9934 7.62839 11.8162 7.62839 11.6373C7.62839 11.4583 7.59418 11.2811 7.52773 11.1158C7.46128 10.9504 7.36388 10.8002 7.24109 10.6737L4.51269 7.86191H14.6781C15.0287 7.86191 15.3649 7.71838 15.6128 7.4629C15.8607 7.20742 16 6.86091 16 6.49961C16 6.13831 15.8607 5.79181 15.6128 5.53633C15.3649 5.28085 15.0287 5.13732 14.6781 5.13732H4.51269L7.24109 2.32555C7.48896 2.06999 7.62816 1.72342 7.62808 1.36209C7.62799 1.00075 7.48863 0.654254 7.24065 0.398813C6.99266 0.143372 6.65637 -8.51219e-05 6.30575 3.78931e-08C5.95513 8.51977e-05 5.61891 0.143706 5.37104 0.399267L0.386594 5.53693Z" fill="url(#cta-arrow-detail2)"/><defs><linearGradient id="cta-arrow-detail2" x1="0" y1="2.889" x2="16.047" y2="3.156" gradientUnits="userSpaceOnUse"><stop stop-color="#72DA6E"/><stop offset="1" stop-color="#6FC86B"/></linearGradient></defs></svg></span>ご利用者のお声</a></li>
+            <li><a href="qa.html" class="section-cta__link"><span class="section-cta__link-arrow"
+                  aria-hidden="true"><svg width="16" height="13" viewBox="0 0 16 13" fill="none">
+                    <path
+                      d="M0.386594 5.53693C0.139046 5.79236 0 6.1386 0 6.49961C0 6.86062 0.139046 7.20687 0.386594 7.4623L5.37104 12.6009C5.49383 12.7274 5.6396 12.8278 5.80003 12.8963C5.96046 12.9648 6.13241 13 6.30606 13C6.47971 13 6.65166 12.9648 6.8121 12.8963C6.97253 12.8278 7.1183 12.7274 7.24109 12.6009C7.36388 12.4743 7.46128 12.3241 7.52773 12.1588C7.59418 11.9934 7.62839 11.8162 7.62839 11.6373C7.62839 11.4583 7.59418 11.2811 7.52773 11.1158C7.46128 10.9504 7.36388 10.8002 7.24109 10.6737L4.51269 7.86191H14.6781C15.0287 7.86191 15.3649 7.71838 15.6128 7.4629C15.8607 7.20742 16 6.86091 16 6.49961C16 6.13831 15.8607 5.79181 15.6128 5.53633C15.3649 5.28085 15.0287 5.13732 14.6781 5.13732H4.51269L7.24109 2.32555C7.48896 2.06999 7.62816 1.72342 7.62808 1.36209C7.62799 1.00075 7.48863 0.654254 7.24065 0.398813C6.99266 0.143372 6.65637 -8.51219e-05 6.30575 3.78931e-08C5.95513 8.51977e-05 5.61891 0.143706 5.37104 0.399267L0.386594 5.53693Z"
+                      fill="url(#cta-arrow-detail1)" />
+                    <defs>
+                      <linearGradient id="cta-arrow-detail1" x1="0" y1="2.889" x2="16.047" y2="3.156"
+                        gradientUnits="userSpaceOnUse">
+                        <stop stop-color="#72DA6E" />
+                        <stop offset="1" stop-color="#6FC86B" />
+                      </linearGradient>
+                    </defs>
+                  </svg></span>よくあるご質問</a></li>
+            <li><a href="voice.html" class="section-cta__link"><span class="section-cta__link-arrow"
+                  aria-hidden="true"><svg width="16" height="13" viewBox="0 0 16 13" fill="none">
+                    <path
+                      d="M0.386594 5.53693C0.139046 5.79236 0 6.1386 0 6.49961C0 6.86062 0.139046 7.20687 0.386594 7.4623L5.37104 12.6009C5.49383 12.7274 5.6396 12.8278 5.80003 12.8963C5.96046 12.9648 6.13241 13 6.30606 13C6.47971 13 6.65166 12.9648 6.8121 12.8963C6.97253 12.8278 7.1183 12.7274 7.24109 12.6009C7.36388 12.4743 7.46128 12.3241 7.52773 12.1588C7.59418 11.9934 7.62839 11.8162 7.62839 11.6373C7.62839 11.4583 7.59418 11.2811 7.52773 11.1158C7.46128 10.9504 7.36388 10.8002 7.24109 10.6737L4.51269 7.86191H14.6781C15.0287 7.86191 15.3649 7.71838 15.6128 7.4629C15.8607 7.20742 16 6.86091 16 6.49961C16 6.13831 15.8607 5.79181 15.6128 5.53633C15.3649 5.28085 15.0287 5.13732 14.6781 5.13732H4.51269L7.24109 2.32555C7.48896 2.06999 7.62816 1.72342 7.62808 1.36209C7.62799 1.00075 7.48863 0.654254 7.24065 0.398813C6.99266 0.143372 6.65637 -8.51219e-05 6.30575 3.78931e-08C5.95513 8.51977e-05 5.61891 0.143706 5.37104 0.399267L0.386594 5.53693Z"
+                      fill="url(#cta-arrow-detail2)" />
+                    <defs>
+                      <linearGradient id="cta-arrow-detail2" x1="0" y1="2.889" x2="16.047" y2="3.156"
+                        gradientUnits="userSpaceOnUse">
+                        <stop stop-color="#72DA6E" />
+                        <stop offset="1" stop-color="#6FC86B" />
+                      </linearGradient>
+                    </defs>
+                  </svg></span>ご利用者のお声</a></li>
           </ul>
         </div>
         <div class="section-cta__btn">
@@ -129,11 +154,13 @@
     <div class="site-footer__inner l-container">
       <div class="site-footer__content">
         <div class="site-footer__brand">
-          <img src="figma-assets/logo-symbol.svg" alt="" class="site-footer__symbol" />
-          <div class="site-footer__brand-text">
-            <span class="site-footer__brand-sub">就労継続支援B型</span>
-            <span class="site-footer__brand-main">アルト</span>
-          </div>
+          <a href="index.html" class="site-footer__brand-link" aria-label="トップページへ">
+            <img src="figma-assets/logo-symbol.svg" alt="" class="site-footer__symbol" />
+            <div class="site-footer__brand-text">
+              <span class="site-footer__brand-sub">就労継続支援B型</span>
+              <span class="site-footer__brand-main">アルト</span>
+            </div>
+          </a>
         </div>
         <div class="site-footer__info">
           <p class="site-footer__label">住所</p>
@@ -153,7 +180,7 @@
         <nav class="site-footer__links">
           <ul class="site-footer__links-col">
             <li><a href="service.html">サービス紹介</a></li>
-            <li><a href="schedule.html">一日の過ごし方</a></li>
+            <li><a href="schedule.html">1日の過ごし方</a></li>
             <li><a href="flow.html">ご利用の流れ</a></li>
             <li><a href="voice.html">利用者の声</a></li>
             <li><a href="introduction.html">事業所紹介</a></li>
@@ -175,6 +202,13 @@
       </div>
     </div>
   </footer>
+
+  <!-- SP用：下部固定CTA -->
+  <div class="fixed-cta-bar" id="fixed-cta-bar" aria-hidden="true">
+    <a class="fixed-cta-bar__link" href="contact.html">
+      <img src="figma-assets/sp-cta.png" alt="資料請求・無料相談" class="fixed-cta-bar__image" width="240" height="80" />
+    </a>
+  </div>
 
   <script src="main.js"></script>
 </body>
