--- a/introduction.html
+++ b/introduction.html
@@ -40,11 +40,11 @@
 
         <nav class="site-header__nav" aria-label="グローバルナビゲーション">
           <ul class="site-header__nav-list">
-            <li class="site-header__nav-item"><a class="site-header__nav-link" href="index.html#top">トップ</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="service.html">サービス紹介</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="schedule.html">1日の過ごし方</a></li>
-            <li class="site-header__nav-item"><a class="site-header__nav-link" href="staff.html">スタッフ紹介</a></li>
             <li class="site-header__nav-item"><a class="site-header__nav-link" href="flow.html">ご利用の流れ</a></li>
+            <li class="site-header__nav-item"><a class="site-header__nav-link" href="voice.html">利用者の声</a></li>
+            <li class="site-header__nav-item"><a class="site-header__nav-link site-header__nav-link--cta" href="contact.html">資料請求</a></li>
           </ul>
         </nav>
       </div>
@@ -87,8 +87,10 @@
             <div class="intro-page__access-item">
               <span class="intro-page__access-icon" aria-hidden="true">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" stroke="#74D170" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                  <circle cx="12" cy="10" r="3" stroke="#74D170" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" stroke="#74D170" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                  <circle cx="12" cy="10" r="3" stroke="#74D170" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
                 </svg>
               </span>
               <div>
@@ -99,7 +101,9 @@
             <div class="intro-page__access-item">
               <span class="intro-page__access-icon" aria-hidden="true">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" stroke="#74D170" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path
+                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
+                    stroke="#74D170" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </span>
               <div>
@@ -110,8 +114,9 @@
             <div class="intro-page__access-item">
               <span class="intro-page__access-icon" aria-hidden="true">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M18 8L22 12L18 16" stroke="#74D170" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M2 12H22" stroke="#74D170" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M18 8L22 12L18 16" stroke="#74D170" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M2 12H22" stroke="#74D170" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </span>
               <div>
@@ -124,12 +129,8 @@
           <div class="intro-page__map-wrap">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3251.248246649857!2d133.332931!3d35.423880000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3556f77f1ee1038f%3A0x9dbbcc8126aafda5!2z5bCx5Yq057aZ57aa5pSv5o-0QuWei-OCouODq-ODiA!5e0!3m2!1sja!2sjp!4v1770803298542!5m2!1sja!2sjp"
-              class="intro-page__map-iframe"
-              title="アルトの所在地（Googleマップ）"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+              class="intro-page__map-iframe" title="アルトの所在地（Googleマップ）" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </section>
 
@@ -211,7 +212,8 @@
           <div class="intro-page__license-box">
             <span class="intro-page__license-icon" aria-hidden="true">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M20 6L9 17l-5-5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M20 6L9 17l-5-5" stroke="white" stroke-width="2" stroke-linecap="round"
+                  stroke-linejoin="round" />
               </svg>
             </span>
             <p class="intro-page__license-title">就労継続支援B型</p>
@@ -234,8 +236,9 @@
             <p class="section-cta__desc-line">少しずつ前に進めるようにスタッフが寄り添います。</p>
           </div>
           <ul class="section-cta__links">
-            <li><a href="qa.html" class="section-cta__link"><span class="section-cta__link-arrow" aria-hidden="true"><svg
-                    width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <li><a href="qa.html" class="section-cta__link"><span class="section-cta__link-arrow"
+                  aria-hidden="true"><svg width="16" height="13" viewBox="0 0 16 13" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M0.386594 5.53693C0.139046 5.79236 0 6.1386 0 6.49961C0 6.86062 0.139046 7.20687 0.386594 7.4623L5.37104 12.6009C5.49383 12.7274 5.6396 12.8278 5.80003 12.8963C5.96046 12.9648 6.13241 13 6.30606 13C6.47971 13 6.65166 12.9648 6.8121 12.8963C6.97253 12.8278 7.1183 12.7274 7.24109 12.6009C7.36388 12.4743 7.46128 12.3241 7.52773 12.1588C7.59418 11.9934 7.62839 11.8162 7.62839 11.6373C7.62839 11.4583 7.59418 11.2811 7.52773 11.1158C7.46128 10.9504 7.36388 10.8002 7.24109 10.6737L4.51269 7.86191H14.6781C15.0287 7.86191 15.3649 7.71838 15.6128 7.4629C15.8607 7.20742 16 6.86091 16 6.49961C16 6.13831 15.8607 5.79181 15.6128 5.53633C15.3649 5.28085 15.0287 5.13732 14.6781 5.13732H4.51269L7.24109 2.32555C7.48896 2.06999 7.62816 1.72342 7.62808 1.36209C7.62799 1.00075 7.48863 0.654254 7.24065 0.398813C6.99266 0.143372 6.65637 -8.51219e-05 6.30575 3.78931e-08C5.95513 8.51977e-05 5.61891 0.143706 5.37104 0.399267L0.386594 5.53693Z"
                       fill="url(#cta-arrow-gradient-intro)" />
@@ -247,8 +250,9 @@
                       </linearGradient>
                     </defs>
                   </svg></span>よくあるご質問</a></li>
-            <li><a href="voice.html" class="section-cta__link"><span class="section-cta__link-arrow" aria-hidden="true"><svg
-                    width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <li><a href="voice.html" class="section-cta__link"><span class="section-cta__link-arrow"
+                  aria-hidden="true"><svg width="16" height="13" viewBox="0 0 16 13" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M0.386594 5.53693C0.139046 5.79236 0 6.1386 0 6.49961C0 6.86062 0.139046 7.20687 0.386594 7.4623L5.37104 12.6009C5.49383 12.7274 5.6396 12.8278 5.80003 12.8963C5.96046 12.9648 6.13241 13 6.30606 13C6.47971 13 6.65166 12.9648 6.8121 12.8963C6.97253 12.8278 7.1183 12.7274 7.24109 12.6009C7.36388 12.4743 7.46128 12.3241 7.52773 12.1588C7.59418 11.9934 7.62839 11.8162 7.62839 11.6373C7.62839 11.4583 7.59418 11.2811 7.52773 11.1158C7.46128 10.9504 7.36388 10.8002 7.24109 10.6737L4.51269 7.86191H14.6781C15.0287 7.86191 15.3649 7.71838 15.6128 7.4629C15.8607 7.20742 16 6.86091 16 6.49961C16 6.13831 15.8607 5.79181 15.6128 5.53633C15.3649 5.28085 15.0287 5.13732 14.6781 5.13732H4.51269L7.24109 2.32555C7.48896 2.06999 7.62816 1.72342 7.62808 1.36209C7.62799 1.00075 7.48863 0.654254 7.24065 0.398813C6.99266 0.143372 6.65637 -8.51219e-05 6.30575 3.78931e-08C5.95513 8.51977e-05 5.61891 0.143706 5.37104 0.399267L0.386594 5.53693Z"
                       fill="url(#cta-arrow-gradient-intro2)" />
@@ -278,11 +282,13 @@
     <div class="site-footer__inner l-container">
       <div class="site-footer__content">
         <div class="site-footer__brand">
-          <img src="figma-assets/logo-symbol.svg" alt="" class="site-footer__symbol" />
-          <div class="site-footer__brand-text">
-            <span class="site-footer__brand-sub">就労継続支援B型</span>
-            <span class="site-footer__brand-main">アルト</span>
-          </div>
+          <a href="index.html" class="site-footer__brand-link" aria-label="トップページへ">
+            <img src="figma-assets/logo-symbol.svg" alt="" class="site-footer__symbol" />
+            <div class="site-footer__brand-text">
+              <span class="site-footer__brand-sub">就労継続支援B型</span>
+              <span class="site-footer__brand-main">アルト</span>
+            </div>
+          </a>
         </div>
         <div class="site-footer__info">
           <p class="site-footer__label">住所</p>
@@ -302,7 +308,7 @@
         <nav class="site-footer__links">
           <ul class="site-footer__links-col">
             <li><a href="service.html">サービス紹介</a></li>
-            <li><a href="schedule.html">一日の過ごし方</a></li>
+            <li><a href="schedule.html">1日の過ごし方</a></li>
             <li><a href="flow.html">ご利用の流れ</a></li>
             <li><a href="voice.html">利用者の声</a></li>
             <li><a href="introduction.html">事業所紹介</a></li>
@@ -323,6 +329,13 @@
       </div>
     </div>
   </footer>
+
+  <!-- SP用：下部固定CTA -->
+  <div class="fixed-cta-bar" id="fixed-cta-bar" aria-hidden="true">
+    <a class="fixed-cta-bar__link" href="contact.html">
+      <img src="figma-assets/sp-cta.png" alt="資料請求・無料相談" class="fixed-cta-bar__image" width="240" height="80" />
+    </a>
+  </div>
 
   <script src="main.js"></script>
 </body>
